messe note enableField, messo nuovi file standard

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -665,6 +665,8 @@ label.inserisci_sponsor=Inserisci Sponsor
 label.inserisci_valutazione=Inserisci Valutazione
 label.inserisci_valutazione_apprendimento=Inserisci Valutazione Apprendimento
 label.inserisci_valutazione_complessiva=Valutazione complessiva dell'Accreditamento
+label.inserita_come_sede_legale=La sede è stata inserita come Sede Legale?
+label.inserita_come_sede_operativa=La sede è stata inserita come Sede Operativa?
 label.inserite_nella_prossima_seduta=Nella prossima Seduta del {0} alle {1}
 label.inserito=inserito
 label.inserito_come_coordinatore=È il coordinatore del comitato scientifico?
@@ -955,6 +957,7 @@ label.referente_informatico=Referente Informatico
 label.regione=Regione
 label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
+label.relazioneAttivitaFormativa=Relazione sull'Attività Formativa
 label.relazioneFinale=Relazione Finale
 label.relazione_annuale=Relazione Annuale
 label.relazione_annuale_anno=Relazione Annuale {0}
@@ -988,6 +991,7 @@ label.ricevuta=Ricevuta
 label.ricevute=Ricevute
 label.ricevute_comunicazione_messaggio={0} Comunicazioni ricevute
 label.richiedente=Richiedente
+label.richiestaAccreditamentoStandard=Richiesta di Accreditamento Standard
 label.richiestaIntegrazione=in richiesta di integrazione
 label.richiesta_accreditamento=Richiesta di accreditamento
 label.richiesta_integrazione=Richiesta di Integrazione
@@ -1035,6 +1039,7 @@ label.sede_di=Sede di
 label.sede_legale=Sede Legale
 label.sede_operativa=Sede Operativa
 label.sede_operativa_coincide=Sede Operativa (coincide con Sede Legale)
+label.sede_valutazione=Sede della Valutazione
 label.sedi=Sedi
 label.sedi_provider=Sedi del Provider
 label.seduta=Seduta Ordine del Giorno
@@ -1256,4 +1261,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.sede_valutazione=Sede della Valutazione
