invia email convocazione valutazione sul campo

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1204,6 +1204,7 @@ message.domanda_aggiunta=Domanda di Accreditamento inserita nella Seduta con suc
 message.domanda_inviata=La domanda è stata inviata correttamente alla segreteria.
 message.domanda_rimossa=Domanda di Accreditamento rimossa dalla Seduta con successo.
 message.domanda_spostata=Domanda di Accreditamento spostata dalla Seduta con successo.
+message.email_convocazione_valutazione_sul_campo_inviata=Email Convocazione Valutazione Sul Campo Inviata.
 message.errore=Si è verificato un errore!
 message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_eliminazione_valutazioni_presenti=Non è possibile eliminare la Seduta fintanto che vi saranno Domande inserite nell'Ordine del Giorno.
@@ -1260,4 +1261,4 @@ month.maggio=Maggio
 month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
-month.settembre=Settembre
+month.settembre=Settembrettembre
