ultime modifiche richieste 20/12/2016:
-cambio tipo data valutazione
-valutazioni storico ordinate per data
-labels
-valutazione complessiva di valutazioneSulCampo non obbligatoria
-sistemato @manytoone in VerbaleValutazioneSulCampo.java

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -586,6 +586,7 @@ label.from_provider_list={0} ({1})
 label.from_segreteria=Da: Segreteria ECM
 label.from_segreteria_list=Segreteria ECM
 label.funzionigramma=Funzionigramma
+label.genera_file=Genera file
 label.generale=Generale
 label.gestione_domande=Ordine del Giorno
 label.gestione_domande_seduta=Gestione delle Domande di Accreditamento della Seduta del {0}
@@ -1027,6 +1028,7 @@ label.salva=Salva
 label.salva_bozza=Salva come bozza
 label.salva_modifiche=Salva Modifiche
 label.scadenza_valutazione=Data scadenza Valutazione
+label.scarica_pdf_verbale=Genera modello precompilato del Verbale di Valutazione sul Campo
 label.scegli_file=Scegli file
 label.scelta_evento_piano_formativo=Scelta Evento del Piano Formativo da attuare
 label.scelta_evento_riedizione=Scelta Evento da rieditare
@@ -1240,6 +1242,7 @@ message.seduta_eliminata=Seduta eliminata.
 message.seduta_salvata=La Seduta è stata salvata con successo.
 message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
 message.sono_evidenziati_gli_elementi_aggiunti_e_rimossi_in_attesa_di_approvazione=Sono evidenziati gli elementi aggiunti e rimossi che saranno effettivi solo dopo approvazione da parte della Segreteria ECM.
+message.sottoscrivente_inserito=Sottoscrivente della Valutazione sul Campo inserito con successo!
 message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
 message.utente_salvato=L'utente è stato salvato con successo.
 message.valutazione_commissione_salvata=Valutazione della Commissione e Stato della Domanda di Accreditamento salvati
