Aggiunta labe per nuovi file usata in generazione pdf pdf

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,6 +8,8 @@ IdFieldEnum.ACCREDITAMENTO_ALLEGATI__ESPERIENZA_FORMAZIONE=Modifica Esperienza f
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__PIANO_QUALITA=Modifica Piano di Qualità
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__SISTEMA_INFORMATICO=Modifica Sistema informatico dedicato alla formazione in ambito sanitario
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__UTILIZZO=Modifica Utilizzo di sedi, strutture ed attrezzature di altro soggetto
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__RICHIESTA_ACCREDITAMENTO_STANDARD=Modifica Richista di accreditamento standard
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__RELAZIONE_ATTIVITA_FORMATIVA=Modifica Relazione sull'attività formativa
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__ATTO_NOMINA=Modifica Atto Nomina Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__CODICEFISCALE=Modifica Codice Fiscale Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__COGNOME=Modifica Cognome Componente Comitato Scientifico
