modifiche varie + pdf verbale WIP

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1268,3 +1268,16 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.dati_verbale=Dati della valutazione sul campo
+label.componente_segreteria_numero=Componente Segreteria {0}
+label.esito_valutazioni=Esito della valutazione
+label.esito_positivo=Esito positivo
+label.esito_negativo=Esito negativo
+label.pianoFormativo=Piano Formativo
+label.idoneitaSede=Idoneità della Sede
+label.relazioneAnnuale=Relazione Annuale
+label.percezioneInteresseCommercialeQualita=Percezione Evento Interesse Commerciale Sanità
+label.schedaQualitaPercepita=Scheda Qualità Percepita
+label.presenzaPartecipanti=Presenza dei Partecipanti
+label.reclutamentoDiretto=Reclutamento Diretto
+label.verificaApprendimento=Verifica Apprendimento
