Accreditamento Stato History

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -580,6 +580,9 @@ label.file_descrizione=Descrizione
 label.file_nome=File
 label.filtri=Filtra:
 label.firma_digitalmente=Firma digitalmente
+label.flusso_accreditamento=Flusso Accreditamento
+label.flusso_accreditamento_provvisorio=Flusso Accreditamento Provvisorio
+label.flusso_accreditamento_standard=Flusso Accreditamento Standard
 label.forme_finanziamento_radio=Sono presenti forme di finanziamento?
 label.from=Da:
 label.from_provider=Da: {0} ({1})
@@ -1267,4 +1270,4 @@ month.maggio=Maggio
 month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
-month.settembre=Settembre
+month.settembre=Settembree
