Modifiche all'accreditamento Standard

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -895,6 +895,7 @@ label.partners=Partners
 label.password=Password
 label.password_corrente=Password corrente
 label.password_dimenticata=Hai dimenticato la password?
+label.pdf_verbale_valutazione_sul_campo=Verbale Valutazione sul Campo
 label.pec=PEC
 label.percezione_interesse_commerciale_sanita=Percezione Evento Interesse Commerciale Sanità
 label.permessi=Permessi
