Vaschetta Provider che non hanno inserito Piano Formativo

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -6,10 +6,10 @@ IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_ESCLUSIONE=Modifica Dichiaraz
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_LEGALE=Modifica Dichiarazione del Legale Rappresentante
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__ESPERIENZA_FORMAZIONE=Modifica Esperienza formazione in ambito sanitario
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__PIANO_QUALITA=Modifica Piano di Qualità
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__RELAZIONE_ATTIVITA_FORMATIVA=Modifica Relazione sull'attività formativa
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__RICHIESTA_ACCREDITAMENTO_STANDARD=Modifica Richista di accreditamento standard
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__SISTEMA_INFORMATICO=Modifica Sistema informatico dedicato alla formazione in ambito sanitario
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__UTILIZZO=Modifica Utilizzo di sedi, strutture ed attrezzature di altro soggetto
-IdFieldEnum.ACCREDITAMENTO_ALLEGATI__RICHIESTA_ACCREDITAMENTO_STANDARD=Modifica Richista di accreditamento standard
-IdFieldEnum.ACCREDITAMENTO_ALLEGATI__RELAZIONE_ATTIVITA_FORMATIVA=Modifica Relazione sull'attività formativa
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__ATTO_NOMINA=Modifica Atto Nomina Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__CODICEFISCALE=Modifica Codice Fiscale Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__COGNOME=Modifica Cognome Componente Comitato Scientifico
@@ -381,6 +381,7 @@ label.compilazione_verbale_valutazione_loco=Compilazione Verbale della Valutazio
 label.completa=Completa
 label.componente_comitato=Componente
 label.componente_crec_team_leader=Componente CRECM - Team Leader
+label.componente_segreteria_numero=Componente Segreteria {0}
 label.componenti_comitato_scientifico=Componenti del Comitato Scientifico
 label.componenti_segreteria=Componenti della Segreteria
 label.componi=Componi
@@ -474,6 +475,7 @@ label.dati_legale=Dati del Legale
 label.dati_legale_login=Dati del\nLegale Rappresentante
 label.dati_non_inseriti= (dati non inseriti)
 label.dati_struttura=Dati della Struttura
+label.dati_verbale=Dati della valutazione sul campo
 label.dato_non_inserito=Dato non inserito
 label.decreto_accreditamento=Decreto Accreditamento
 label.decreto_diniego=Decreto Diniego
@@ -539,8 +541,11 @@ label.errore_login=Username e/o password errati
 label.esempio_modello=Modello di esempio
 label.esiste_traduzione=Esiste un sistema di traduzione simultanea?
 label.esito_della_valutazione_sul_campo=Esito della Valutazione sul Campo
+label.esito_negativo=Esito negativo
+label.esito_positivo=Esito positivo
 label.esito_ricerca=(Esito Ricerca)
 label.esito_valutazione=Esito Valutazione
+label.esito_valutazioni=Esito della valutazione
 label.esperienzaFormazione=Esperienza formazione in ambito sanitario
 label.esporta_pdf=Esporta in pdf
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
@@ -610,6 +615,7 @@ label.homepage=ECM - Regione Veneto
 label.id=Id
 label.id_proto_batch=Id Proto Batch
 label.id_provider=Id del Provider
+label.idoneitaSede=Idoneità della Sede
 label.idoneita_sede=Idoneità della Sede
 label.impegno_complessivo_ore=Impegno complessivo in ore
 label.importEventiDaCsvFile=Importa Piano Formativo da CSV
@@ -826,8 +832,10 @@ label.non_abilitato=Non abilitato
 label.non_ancora_lette=non ancora lette
 label.non_effettuata_consecutivamente=Non effettuata (consecutivamente)
 label.non_effettuate_consecutivamente=Non effettuate (consecutivamente)
+label.non_ha_inserito_piano_formativo=Non ha inserito il piano formativo
 label.non_ha_pagato_quota_annuale=Non ha pagato la quota annuale
 label.non_ha_valutato=Non ha valutato le domande di accreditamento assegnategli
+label.non_hanno_inserito_piano_formativo=Non hanno inserito il piano formativo
 label.non_hanno_pagato_quota_annuale=Non hanno pagato la quota annuale
 label.non_hanno_valutato=Non hanno valutato le domande di accreditamento assegnate loro
 label.non_inserito=non inserito
@@ -900,10 +908,12 @@ label.password_corrente=Password corrente
 label.password_dimenticata=Hai dimenticato la password?
 label.pdf_verbale_valutazione_sul_campo=Verbale Valutazione sul Campo
 label.pec=PEC
+label.percezioneInteresseCommercialeQualita=Percezione Evento Interesse Commerciale Sanità
 label.percezione_interesse_commerciale_sanita=Percezione Evento Interesse Commerciale Sanità
 label.permessi=Permessi
 label.persone=Persone
 label.pfa_provider=Piano Formativo del Provider
+label.pianoFormativo=Piano Formativo
 label.pianoQualita=Piano di Qualità
 label.piano_formativo=Piano Formativo
 label.piano_formativo_anno=Piano Formativo relativo all''anno {0}
@@ -917,6 +927,7 @@ label.presa_in_carico_da=Presa in carico da
 label.presa_visione=Presa visione
 label.presente_alla_visita_verifica=(presente alla visita di verifica)
 label.presente_legale_rappresentante_sottoscrizione_verbale=\u00C8 presente il Legale Rappresentante per la sottoscrizione del verbale?
+label.presenzaPartecipanti=Presenza dei Partecipanti
 label.presenza_partecipanti=Presenza dei Partecipanti
 label.prezzo=Prezzo
 label.privata=Privata
@@ -958,6 +969,7 @@ label.rapporto_obiettivi_regionali=Percentuale eventi con Obiettivi Regionali
 label.rappresentante=Rappresentante
 label.rappresentante_radio=Chi sta effettuando la presente richiesta?
 label.razionale=Razionale
+label.reclutamentoDiretto=Reclutamento Diretto
 label.reclutamento_diretto=Reclutamento Diretto
 label.recupera_password=Recupera password
 label.referee=Referee
@@ -966,6 +978,7 @@ label.referente_informatico=Referente Informatico
 label.regione=Regione
 label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
+label.relazioneAnnuale=Relazione Annuale
 label.relazioneAttivitaFormativa=Relazione sull'Attività Formativa
 label.relazioneFinale=Relazione Finale
 label.relazione_annuale=Relazione Annuale
@@ -1042,6 +1055,7 @@ label.scelta_evento_piano_formativo=Scelta Evento del Piano Formativo da attuare
 label.scelta_evento_riedizione=Scelta Evento da rieditare
 label.scelta_modalita=Scelta della modalità di inserimento
 label.scelta_procedura_formativa_evento=Scelta della Procedura Formativa dell'Evento da inserire
+label.schedaQualitaPercepita=Scheda Qualità Percepita
 label.scheda_provider=Scheda provider
 label.scheda_qualita_percepita=Scheda Qualità Percepita
 label.sede=Sede
@@ -1176,6 +1190,7 @@ label.vedi_tutte=Vedi tutte
 label.verbale=Verbale
 label.verbalePdfFirmato=PDF del Verbale della Valutazione sul Campo firmato
 label.verbale_valutazione_sul_campo=Verbale Valutazione sul Campo
+label.verificaApprendimento=Verifica Apprendimento
 label.verifica_apprendimento=Verifica Apprendimento
 label.verifica_apprendimento_partecipanti=Verifica Apprendimento partecipanti
 label.verifica_distanza_ricadute_formative=Verifica a distanza di tempo delle ricadute formative
@@ -1274,16 +1289,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.dati_verbale=Dati della valutazione sul campo
-label.componente_segreteria_numero=Componente Segreteria {0}
-label.esito_valutazioni=Esito della valutazione
-label.esito_positivo=Esito positivo
-label.esito_negativo=Esito negativo
-label.pianoFormativo=Piano Formativo
-label.idoneitaSede=Idoneità della Sede
-label.relazioneAnnuale=Relazione Annuale
-label.percezioneInteresseCommercialeQualita=Percezione Evento Interesse Commerciale Sanità
-label.schedaQualitaPercepita=Scheda Qualità Percepita
-label.presenzaPartecipanti=Presenza dei Partecipanti
-label.reclutamentoDiretto=Reclutamento Diretto
-label.verificaApprendimento=Verifica Apprendimento
