--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -551,6 +551,7 @@ label.esporta_pdf=Esporta in pdf
 label.estrattoBilancioComplessivo=Estratto del bilancio complessivo degli ultimi 3 anni
 label.estrattoBilancioFormazione=Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.eventi=Eventi
+label.eventi_con_crediti_non_confermati=Eventi con crediti non confermati
 label.eventi_definitivi_da_pfa_anno=Eventi rendicontati corrispondenti al Piano Formativo
 label.eventi_in_bozza=In bozza
 label.eventi_inseriti_pfa_anno=Eventi previsti nel Piano Formativo
@@ -560,6 +561,7 @@ label.eventi_provider=Eventi del Provider
 label.eventi_scadenza_pagamento=Eventi in scadenza per Pagamento/Rendicontazione
 label.eventi_scaduti_pagamento=Eventi scaduti e non rapportati
 label.evento=Evento
+label.evento_con_crediti_non_confermati=Evento con crediti non confermati
 label.evento_contenuti=Contenuti dell'evento
 label.evento_contiene_questi_contenuti=L'evento formativo prevede i seguenti contenuti?
 label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
