Link Linee Guida Eventi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -708,6 +708,7 @@ label.iter_accreditamento=Iter Accreditamento
 label.label.rivaluta=Rivaluta
 label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
+label.linee_guida_eventi=Linee guida eventi
 label.lingua_straniera_utilizzata=Lingua straniera utilizzata
 label.list_eventi=Lista degli eventi del provider {0}
 label.listaDomandeDaInserireInODG=Lista delle Domande di Accreditamento da inserire nell'Ordine Del Giorno
