modifiche per il Modulo14:
: Bacheca segreteria per abilitazioni/disabilitazioni attività Provider

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -252,6 +252,7 @@ label.FSC=formazione sul campo (FSC)
 label.Ok=Ok
 label.RES=formazione residenziale (RES)
 label.a=A
+label.abilita=Abilita
 label.abilita_campi=Abilita campi
 label.abilita_id_editabili=Abilita campi editabili
 label.abilita_modifica_campi=Abilita modifica ai campi
@@ -501,6 +502,7 @@ label.dichiarazioneLegale=Dichiarazione del Legale Rappresentante
 label.dichiarazione_assenza_conflitto_interesse=Dichiarazione di assenza di conflitto di interesse
 label.diniego=Diniego
 label.diritti_riservati=\u00A92015 All Rights Reserved. 3DInformatica srl.
+label.disabilita=Disabilita
 label.disciplina=Disciplina
 label.discipline=Discipline
 label.discipline_riepilogo=Riepilogo delle discipline selezionate
@@ -590,6 +592,7 @@ label.file_descrizione=Descrizione
 label.file_nome=File
 label.filtri=Filtra:
 label.firma_digitalmente=Firma digitalmente
+label.flag_crediti_confermati=Crediti confermati
 label.flusso_accreditamento=Flusso Accreditamento
 label.flusso_accreditamento_provvisorio=Flusso Accreditamento Provvisorio
 label.flusso_accreditamento_standard=Flusso Accreditamento Standard
@@ -623,6 +626,7 @@ label.idoneita_sede=Idoneità della Sede
 label.impegno_complessivo_ore=Impegno complessivo in ore
 label.importEventiDaCsvFile=Importa Piano Formativo da CSV
 label.importo=Importo
+label.impostazioni_attivita_provider=Impostazioni delle attività del Provider
 label.in_attesa_attivazione=In attesa di attivazione
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
 label.in_preavviso_rigetto=In preavviso di rigetto
@@ -844,6 +848,7 @@ label.non_hanno_pagato_quota_annuale=Non hanno pagato la quota annuale
 label.non_hanno_valutato=Non hanno valutato le domande di accreditamento assegnate loro
 label.non_inserito=non inserito
 label.non_pagato=Non pagato
+label.non_specificato=non specificato
 label.non_valido=non valido
 label.non_valutato=non valutato
 label.not_enabled=Disabilitato
@@ -925,6 +930,10 @@ label.piano_formativo_modificabile_fino_a=Piano formativo modificabile entro il 
 label.piva=PIVA
 label.portale=Portale
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
+label.posticipo_inserimento_domanda_accreditamento_standard=Inserimento domanda accreditamento standard
+label.posticipo_inserimento_eventi=Inserimento eventi
+label.posticipo_inserimento_piano_formativo=Inserimento piano formativo
+label.posticipo_inserimento_relazione_annuale=Inserimento relazione annuale
 label.preavvisoRigetto=in preavviso di rigetto
 label.prendi_in_carica=Prendi in Carico
 label.presa_in_carico_da=Presa in carico da
@@ -1052,6 +1061,7 @@ label.ruolo=Ruolo
 label.salva=Salva
 label.salva_bozza=Salva come bozza
 label.salva_modifiche=Salva Modifiche
+label.scadenza=scadenza:
 label.scadenza_valutazione=Data scadenza Valutazione
 label.scarica_pdf_verbale=Genera modello precompilato del Verbale di Valutazione sul Campo
 label.scegli_file=Scegli file
@@ -1109,6 +1119,7 @@ label.stato_account=Stato Account
 label.stato_accreditamento=Stato Accreditamento
 label.stato_accreditamento_valutazione=Stato della domanda al momento della valutazione
 label.stato_cv=Stato CV
+label.stato_del_provider=Stato del Provider
 label.stato_destinazione=Stato di Destinazione della Domanda di Accreditamento
 label.stato_domanda=Stato Domanda
 label.stato_inserimento=Stato Inserimento
@@ -1219,6 +1230,7 @@ label.workshop_radio_text=Workshop/Seminari ECM che si svolgono all’interno di
 message.accesso_negato=ACCESSO NEGATO
 message.accreditamento_not_trovato=Nessun accreditamento attivo trovato
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
+message.anagrafica_salvata=Anagrafica aggiornata con successo!
 message.campi_salvati=Campi abilitati/disabilitati con successo!
 message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
 message.compilare_tab1=Si prega di compilare la sezione dei Dati dell'Organizzatore prima di procedere alla compilazione dei Dati dei Responsabili.
@@ -1246,6 +1258,7 @@ message.evento_salvato_in_bozza_success=Bozza dell'Evento salvata con successo
 message.evento_validato_e_salvato_success=L'Evento è stato validato e salvato con successo.
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
 message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
+message.impostazioni_provider_aggiornate=Le impostazioni del Provider sono state aggiornate con successo.
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
 message.inserire_almeno_sede_legale=\u00C8 necessario inserire almeno una Sede Legale
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
@@ -1278,9 +1291,9 @@ message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è st
 message.valutazione_salvata=Valutazione e note salvate con successo!
 message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata ai Referee CRECM con successo.
 message.valutazione_salvata_team_leader_assegnato=Valutazione salvata e assegnata al Team Leader con successo.
-message.verbale_salvato=Verbale aggiornato con successo!
+message.verbale_salvato=Verbale aggiornato con successo.
 message.warning=Attenzione
-message.xml_evento_validation_ok=Report importato con successo!
+message.xml_evento_validation_ok=Report importato con successo.
 month.agosto=Agosto
 month.aprile=Aprile
 month.dicembre=Dicembre
