--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -349,6 +349,7 @@ label.campo=Campo
 label.caninsert_domanda_accreditamento_standard=Inserimento Domanda Accreditamento Standard
 label.caninsert_eventi=Inserimento Eventi
 label.caninsert_piano_formativo=Inserimento Piano Formativo
+label.caninsert_relazione_annuale=Inserimento Relazione Annuale
 label.cap=CAP
 label.caratteri_rimanenti=caratteri rimanenti
 label.carica=Carica
@@ -628,6 +629,7 @@ label.impegno_complessivo_ore=Impegno complessivo in ore
 label.importEventiDaCsvFile=Importa Piano Formativo da CSV
 label.importo=Importo
 label.impostazioni_attivita_provider=Impostazioni delle attività del Provider
+label.impostazioni_scadenze_evento=Impostazioni delle scadenze relative all'evento
 label.in_attesa_attivazione=In attesa di attivazione
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
 label.in_preavviso_rigetto=In preavviso di rigetto
@@ -935,6 +937,8 @@ label.posticipo_inserimento_domanda_accreditamento_standard=Inserimento domanda 
 label.posticipo_inserimento_eventi=Inserimento eventi
 label.posticipo_inserimento_piano_formativo=Inserimento piano formativo
 label.posticipo_inserimento_relazione_annuale=Inserimento relazione annuale
+label.posticipo_scadenza_pagamento=Data scadenza pagamento
+label.posticipo_scadenza_rendicontazione=Data scadenza rendicontazione
 label.preavvisoRigetto=in preavviso di rigetto
 label.prendi_in_carica=Prendi in Carico
 label.presa_in_carico_da=Presa in carico da
@@ -1278,6 +1282,7 @@ message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.relazione_annuale_salvata=Relazione Annuale salvata con successo.
 message.risposta_inviata=Risposta inviata con successo.
+message.scadenze_evento_aggiornate=Scadenze dell'evento aggiornate con successo.
 message.sede_eliminata=Sede eliminata.
 message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.seduta_eliminata=Seduta eliminata.
