Modifiche al canale comunicazione (Modulo 18) filtro provider e textarea

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1312,3 +1312,7 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.richiesta_conferma=Richiesta di conferma
+label.richiesta_conferma_cambio_crediti=Attenzione! Le modifiche effettuate comporteranno una modifica dei crediti attribuiti all''evento da: {0} a: {1}
+label.notifica_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento precedentemente registrato era di: {0}, verrà ora aggiornato con il valore di: {1} crediti. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {2}
+label.notifica_non_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento rimane di: {0}. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {1}
