--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -188,6 +188,7 @@ error.errore_tabella_fscGRUPPI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ru
 error.errore_tabella_fscPROGETTI_DI_MIGLIORAMENTO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - l'impegno complessivo per il ruolo Partecipante A, B, C sia almeno di 8 ore \n - massimo un partecipante per il ruolo Responsabile
 error.errore_tabella_fscTRAINING_INDIVIDUALIZZATO=Controllare nel riepilogo dei ruoli segnati in rosso che: \n - il numero dei partecipanti sia maggiore di 0 per ogni ruolo \n - la sommatoria di tutti i partecipanti con ruolo Partecipante A, B, C non violi il vincolo: massimo 5 Partecipanti per Tutor \n - massimo un partecipante per il ruolo Coordinatore
 error.errori_calcolo_tabella_riepilogo=Si è verificato un errore nel calcolo della tabella di riepilogo dei ruoli
+error.evento_non_trovato=Non è stato trovato alcun evento corrispondente all'Id inserito.
 error.file_non_firmato=Il file deve essere firmato digitalmente
 error.file_vuoto=Il file inserito è vuoto.
 error.formatNonAccepted=Errore nel formato del file. \u00C8 consentito inviare solo file PDF e P7M
@@ -569,6 +570,7 @@ label.evento=Evento
 label.evento_con_crediti_non_confermati=Evento con crediti non confermati
 label.evento_contenuti=Contenuti dell'evento
 label.evento_contiene_questi_contenuti=L'evento formativo prevede i seguenti contenuti?
+label.evento_link=Link evento:
 label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
 label.evento_non_modificabile_gia_attuato=Evento non modificabile poichè accreditato
 label.evento_professioni=Evento per professioni
@@ -621,6 +623,7 @@ label.help=Help
 label.home=Torna alla Home
 label.homepage=ECM - Regione Veneto
 label.id=Id
+label.id_evento_link=ID evento: (opzionale)
 label.id_proto_batch=Id Proto Batch
 label.id_provider=Id del Provider
 label.idoneitaSede=Idoneità della Sede
@@ -860,6 +863,8 @@ label.noteOsservazioniIntegrazione=Note e Osservazioni Integrazione
 label.noteOsservazioniPreavvisoRigetto=Note e Osservazioni Preavviso di Rigetto
 label.note_osservazioni_integrazione=Note e Osservazioni sull'Integrazione
 label.note_osservazioni_preavviso_rigetto=Note e Osservazioni sul Preavviso di Rigetto
+label.notifica_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento precedentemente registrato era di: {0}, verrà ora aggiornato con il valore di: {1} crediti. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {2}
+label.notifica_non_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento rimane di: {0}. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {1}
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 label.numero_partecipanti=Numero dei partecipanti
@@ -1034,6 +1039,8 @@ label.richiedente=Richiedente
 label.richiestaAccreditamentoStandard=Richiesta di Accreditamento Standard
 label.richiestaIntegrazione=in richiesta di integrazione
 label.richiesta_accreditamento=Richiesta di accreditamento
+label.richiesta_conferma=Richiesta di conferma
+label.richiesta_conferma_cambio_crediti=Attenzione! Le modifiche effettuate comporteranno una modifica dei crediti attribuiti all''evento da: {0} a: {1}
 label.richiesta_integrazione=Richiesta di Integrazione
 label.richiesta_preavviso_di_rigetto=Richiesta Preavviso di Rigetto
 label.richiesta_preavviso_rigetto=Richiesta Preavviso di Rigetto
@@ -1186,6 +1193,7 @@ label.utenti=Utenti
 label.utilizzo=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
 label.vai_al_modulo_di_registrazione=Vai al modulo di registrazione
 label.vai_all_evento=Vai all'Evento
+label.vai_all_evento=Visualizza Evento
 label.validazione=Validazione
 label.valido=valido
 label.valuta=Valuta
@@ -1312,7 +1320,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.richiesta_conferma=Richiesta di conferma
-label.richiesta_conferma_cambio_crediti=Attenzione! Le modifiche effettuate comporteranno una modifica dei crediti attribuiti all''evento da: {0} a: {1}
-label.notifica_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento precedentemente registrato era di: {0}, verrà ora aggiornato con il valore di: {1} crediti. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {2}
-label.notifica_non_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento rimane di: {0}. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {1}
