change al modo di salvare il link dell'evento in comunicazione

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1262,6 +1262,7 @@ message.email_convocazione_valutazione_sul_campo_inviata=Email Convocazione Valu
 message.errore=Si è verificato un errore!
 message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_eliminazione_valutazioni_presenti=Non è possibile eliminare la Seduta fintanto che vi saranno Domande inserite nell'Ordine del Giorno.
+message.errore_evento_non_esiste=L'evento sembra non esistere più
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
 message.errore_inserimento_numero_verbale=\u00C8 obbligatorio inserire il numero del Verbale
