modulo 24 ricerca per docente (solo in OR)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -176,6 +176,7 @@ error.data_non_valida_verbale=Data non valida! La data non può essere anteceden
 error.date_non_separabili=Data di inizio e data di fine evento devono coincidere
 error.date_non_unificabili=Data di inizio e data di fine evento non possono coincidere
 error.datiaccreditamento_mancanti=\u00C8 necessario compilare la sezione dei dati di accreditamento prima di compilare
+error.docente_gia_inserito=Docente già inserito
 error.durata_minima_complessiva_non_raggiunta=Durata minima complessiva dell'evento non raggiunta
 error.elaborazione_pendente=Invio non concesso.\u00c8 gi\u00e0 presente un invio pendente in fase di elaborazione
 error.email.duplicated=email già registrata nel sistema
@@ -281,6 +282,7 @@ label.accreditamento_valutazione_segreteria=Data valutazione segreteria
 label.accreditato=Accreditato
 label.aggiorna=Aggiorna
 label.aggiorna_account=Aggiorna Account
+label.aggiungi=Aggiungi
 label.aggiungi_componente=Aggiungi componente del comitato
 label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
 label.aggiungi_evento=Aggiungi evento
