Modulo 24 - ricerca per docente

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1034,6 +1034,8 @@ label.responsabili_scientifici=Responsabili scientifici
 label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
 label.ricavi_altre_forme_finanziamento=Ricavi da altre forme di finanziamento
 label.ricavi_da_sponsor=Ricavi da sponsorizzazioni
+label.ricerca_docenti_and=Ricerca gli eventi che contengono tutti i docenti selezionati
+label.ricerca_docenti_or=Ricerca gli eventi che contengono almeno uno dei docenti selezionati
 label.ricevuta=Ricevuta
 label.ricevute=Ricevute
 label.ricevute_comunicazione_messaggio={0} Comunicazioni ricevute
