bugfix comunicazioni e ricerca eventi

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -625,7 +625,7 @@ label.help=Help
 label.home=Torna alla Home
 label.homepage=ECM - Regione Veneto
 label.id=Id
-label.id_evento_link=ID evento: (opzionale)
+label.id_evento_link=ID evento:
 label.id_proto_batch=Id Proto Batch
 label.id_provider=Id del Provider
 label.idoneitaSede=Idoneità della Sede
@@ -1325,3 +1325,4 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+message.warning_no_privilegi_necessari_risorsa=L'utente risulta non avere i privilegi necessari per accedere alla risorsa.
